# poprox-concepts

./: .gitignore  .pre-commit-config.yaml  README.md  image_metadata.json  pyproject.toml
.github/workflows/: run-tests.yml
src/poprox_concepts/: __init__.py  account.py  article.py  internals.py
src/poprox_concepts/api/: __init__.py  click_filtering.py  recommendations.py  tracking.py
src/poprox_concepts/api/recommendations/: __init__.py  v1.py  v2.py  v3.py  v4.py  v5.py  versions.py
src/poprox_concepts/domain/: __init__.py  account.py  article.py  click.py  click_history.py  click_history_with_timestamp  compensation.py  demographics.py  experience.py  image.py  internals.py  login.py  newsletter.py  profile.py  recommendation.py  topics.py
tests/: test_internals.py
tests/api/: test_v1.py  test_v5_response_new_field.py  v1_request.json  v1_response.json
